Rupinder - add dimen for operaiton_btn(s)

--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="number_btn_width">40dp</dimen>
+    <dimen name="number_btn_width">50dp</dimen>
+    <dimen name="operation_btn_width">100dp</dimen>
 </resources>
