Rupinder - add sample buttons for numbers

--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -10,8 +10,109 @@
         android:id="@+id/calculation_area"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="16dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <Button
+        android:id="@+id/number_btn_9"
+        android:layout_width="@dimen/number_btn_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:text="9"
+        app:layout_constraintBottom_toTopOf="@+id/number_btn_6"
+        app:layout_constraintStart_toEndOf="@+id/number_btn_8" />
+
+    <Button
+        android:id="@+id/number_btn_8"
+        android:layout_width="@dimen/number_btn_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:text="8"
+        app:layout_constraintBottom_toTopOf="@+id/number_btn_5"
+        app:layout_constraintStart_toEndOf="@+id/number_btn_7" />
+
+    <Button
+        android:id="@+id/number_btn_7"
+        android:layout_width="@dimen/number_btn_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:text="7"
+        app:layout_constraintBottom_toTopOf="@+id/number_btn_4"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/number_btn_6"
+        android:layout_width="@dimen/number_btn_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:text="6"
+        app:layout_constraintBottom_toTopOf="@+id/number_btn_3"
+        app:layout_constraintStart_toEndOf="@id/number_btn_5" />
+
+    <Button
+        android:id="@+id/number_btn_5"
+        android:layout_width="@dimen/number_btn_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:text="5"
+        app:layout_constraintBottom_toTopOf="@+id/number_btn_2"
+        app:layout_constraintStart_toEndOf="@id/number_btn_4" />
+
+    <Button
+        android:id="@+id/number_btn_4"
+        android:layout_width="@dimen/number_btn_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:text="4"
+        app:layout_constraintBottom_toTopOf="@+id/number_btn_1"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/number_btn_3"
+        android:layout_width="@dimen/number_btn_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:text="3"
+        app:layout_constraintBottom_toTopOf="@+id/number_btn_0"
+        app:layout_constraintStart_toEndOf="@+id/number_btn_2" />
+
+    <Button
+        android:id="@+id/number_btn_2"
+        android:layout_width="@dimen/number_btn_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:text="2"
+        app:layout_constraintBottom_toTopOf="@+id/number_btn_0"
+        app:layout_constraintStart_toEndOf="@+id/number_btn_1" />
+
+    <Button
+        android:id="@+id/number_btn_1"
+        android:layout_width="@dimen/number_btn_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:text="1"
+        app:layout_constraintBottom_toTopOf="@+id/number_btn_0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/number_btn_0"
+        android:layout_width="@dimen/operation_btn_width"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:text="0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
