--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -20,99 +20,89 @@
         android:id="@+id/number_btn_9"
         android:layout_width="@dimen/number_btn_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
         android:text="9"
         app:layout_constraintBottom_toTopOf="@+id/number_btn_6"
-        app:layout_constraintStart_toEndOf="@+id/number_btn_8" />
+        app:layout_constraintStart_toEndOf="@+id/number_btn_8"
+        android:theme="@style/flat_buttons" />
 
     <Button
         android:id="@+id/number_btn_8"
         android:layout_width="@dimen/number_btn_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
         android:text="8"
         app:layout_constraintBottom_toTopOf="@+id/number_btn_5"
-        app:layout_constraintStart_toEndOf="@+id/number_btn_7" />
+        app:layout_constraintStart_toEndOf="@+id/number_btn_7"
+        android:theme="@style/flat_buttons" />
 
     <Button
         android:id="@+id/number_btn_7"
         android:layout_width="@dimen/number_btn_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
         android:text="7"
         app:layout_constraintBottom_toTopOf="@+id/number_btn_4"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:theme="@style/flat_buttons" />
 
     <Button
         android:id="@+id/number_btn_6"
         android:layout_width="@dimen/number_btn_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
         android:text="6"
         app:layout_constraintBottom_toTopOf="@+id/number_btn_3"
-        app:layout_constraintStart_toEndOf="@id/number_btn_5" />
+        app:layout_constraintStart_toEndOf="@id/number_btn_5"
+        android:theme="@style/flat_buttons" />
 
     <Button
         android:id="@+id/number_btn_5"
         android:layout_width="@dimen/number_btn_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
         android:text="5"
         app:layout_constraintBottom_toTopOf="@+id/number_btn_2"
-        app:layout_constraintStart_toEndOf="@id/number_btn_4" />
+        app:layout_constraintStart_toEndOf="@id/number_btn_4"
+        android:theme="@style/flat_buttons" />
 
     <Button
         android:id="@+id/number_btn_4"
         android:layout_width="@dimen/number_btn_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
         android:text="4"
         app:layout_constraintBottom_toTopOf="@+id/number_btn_1"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:theme="@style/flat_buttons" />
 
     <Button
         android:id="@+id/number_btn_3"
         android:layout_width="@dimen/number_btn_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
         android:text="3"
         app:layout_constraintBottom_toTopOf="@+id/number_btn_0"
-        app:layout_constraintStart_toEndOf="@+id/number_btn_2" />
+        app:layout_constraintStart_toEndOf="@+id/number_btn_2"
+        android:theme="@style/flat_buttons" />
 
     <Button
         android:id="@+id/number_btn_2"
         android:layout_width="@dimen/number_btn_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
         android:text="2"
         app:layout_constraintBottom_toTopOf="@+id/number_btn_0"
-        app:layout_constraintStart_toEndOf="@+id/number_btn_1" />
+        app:layout_constraintStart_toEndOf="@+id/number_btn_1"
+        android:theme="@style/flat_buttons" />
 
     <Button
         android:id="@+id/number_btn_1"
         android:layout_width="@dimen/number_btn_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
         android:text="1"
         app:layout_constraintBottom_toTopOf="@+id/number_btn_0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:theme="@style/flat_buttons" />
 
     <Button
         android:id="@+id/number_btn_0"
         android:layout_width="@dimen/operation_btn_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
         android:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:theme="@style/flat_buttons" />
 </android.support.constraint.ConstraintLayout>
